--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.20",
+    "v-pagination-3": "^0.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuedraggable": "^4.0.1",
